# SomeCourseWork

./: .gitignore  README.md
courceWorkG3/: CMakeLists.txt  main.cpp
courceWorkG3/forms/: ImageScaled.cpp  MainForm.cpp  MainForm.ui
courseWorkD3/: CMakeLists.txt  cellImage.cpp  cellImage.hpp  main.cpp
courseWorkD3/forms/: mainForm.cpp  mainForm.hpp  mainForm.ui
courseWorkG3/: CMakeLists.txt
courseWorkG3/forms/: ImageScaled.hpp  MainForm.hpp
courseWorkT3/: CMakeLists.txt  main.cpp
courseWorkT3/forms/: MainForm.cpp  MainForm.hpp  MainForm.ui
evolutionTrees3/: AdvancedSettingForm.cpp  AdvancedSettingForm.h  CMakeLists.txt  advancedSettingForm.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
evolutionTrees3/include/: ArenaToImage.hpp  ScaledImageLabel.hpp  ScaledMainImageLabel.hpp
evolutionTrees3/libTree/: CMakeLists.txt  main.cpp  tests.cpp
evolutionTrees3/libTree/include/: Area.hpp  Definitions.hpp  Field.hpp  Seed.hpp  Tree.hpp  TreeBase.hpp
evolutionTrees3/libTree/src/: Area.cpp  Field.cpp  Seed.cpp  Tree.cpp  TreeBase.cpp
evolutionTrees3/src/: ArenaToImage.cpp  ScaledImageLabel.cpp  ScaledMainImageLabel.cpp
